--- a/web-page/ratchaneegorn-webpage/style/style.css
+++ b/web-page/ratchaneegorn-webpage/style/style.css
@@ -1,116 +1,256 @@
 
-#headText{
-    font-size: 30px;
-    width: 100%;
-    border-bottom: 5px solid #298023;
-    width: fit-content;
-    list-style: none;
-    display: inline-block; 
-    margin-left: unset;
-    position: absolute;
-    z-index: 100;
-    top: 50%;
-    transform: translateY(-50%);
-    
-
+@media only screen and (max-width: 600px){
+   .card {
+     padding: 10px 50px;
+   }
+   #main {
+    flex-direction: column;
+   } 
+   .head-circle div{
+     font-size: 16px !important;
+   }
+   .user-action div {
+      font-size: 10px;
+   }
+   body {
+      font-size:20px;
+   }
+   .ap-show {
+      font-size: 12px;
+   } 
 }
-#circle {
-    background: #298023;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    
+body {
+    background-color: #ffdd94;
+    background-image: linear-gradient(to bottom right, #fad874,#ffa0bed5);
+    min-height: 100vh;
+}
+#container {
+    font-family: 'Prompt', sans-serif;
+    border-radius: 20px;
+    margin: 0vh 20vh 0vh 20vh;
+    padding: 20px;
+}
+.text{
+    font-family: 'Mitr', sans-serif;
+    color: #4e692e;
+    font-size: 4vh;
+    text-align: center;
+    padding: 10px;
 }
 
+.headText {
+    font-size: 5vh;
+    text-align: center;
+    border-bottom:2px solid rgba(97, 15, 76, 0.644);
+    margin: 10px;
+}
 #lanChange {
     text-align: right;
-    font-size: 18px;
-}
-#sqBack {
-    
-    width: 60%;
-    height: 60%;
-    border-radius: 20px 20px 0px 0px;
-    background-color: solid #17bda1;
-}
-#day, #where, #time {
-    text-align: left;
-    font-size: 30px;
-}
-
-#logout{
-    margin-right: initial;
-    text-align: center;
-    font-family: "helvetica neue", Arial, Helvetica, sans-serif;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    border: 2px solid rgba(0,0,200,0.6);
-    background: #17bda1(0,0,200,0.6);
-    color: rgba(0,0,200,0.6);
-    box-shadow: 1px 1px 2px rgba(0,0,200,0.4);
-    border-radius: 10px;
-    padding: 3px 10px;
-    display: inline-block;
-    cursor: pointer;
-
-}
-#back {
-    margin-right: initial;
-    text-align: center;
-    font-family: "helvetica neue", Arial, Helvetica, sans-serif;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    text-align: center;
-    border: 2px solid rgba(0,0,200,0.6);
-    background: red;
-    color: white;
-    box-shadow: 1px 1px 2px;
-    border-radius: 20px;
-    padding: 10px 30px;
-    display: inline-block;
-    cursor: pointer;
-
-}
-#main {
-    width: 100%;
-    height: 75vh;
-    display: flex;
-    justify-content: center; /* เรียงแนวนอน */
-    align-items: center; /* จัดให้กล่องตรงกลาง */
-    
-}
-.card {
-    text-align: center;
-    width: 200px;
-    height: 200px;
-    box-shadow: 2px 2px 4px;
-    border-radius: 20px;
-    padding: 10px 30px;
-    background-color: white;
-    margin: 10%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; /* เรียงแนวนอน */
-    align-items: center; /* จัดให้กล่องตรงกลาง */
-
-}
-.card img {
-    width: 150px;
-    
-}
-.card div:first-child {
-    height: 80%;
-}
-.card div:last-child {
-    height: 20%;
-}
-.head-circle {
-    position: relative;
-    height: 100px;
+    font-size: 16px;
 }
 .user-action {
-    display: block;
+    text-align: right;
+}
+#logout {
+    margin-right: initial;
+    text-align: center;
+    font-family: "helvetica neue", Arial, Helvetica, sans-serif;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    text-align: center;
+    border: 2px solid rgba(255, 232, 105, 0.795);
+    background: #ffaf1be0;
+    box-shadow: 2px 2px 4px rgba(0,0,200,0.4);
+    border-radius: 20px;
+    padding: 5px 15px;
+    display: inline-block;
+    cursor: pointer;
+}
+.card-container {
+    background-color: #99ecf5;
+    border-radius: 30px;
+    box-shadow: 20px 10px 20px 2px #ffdd94;
+    margin: 10px 10% 10% 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    height: 400px;
+}
+.card-book, .card-check {
+    box-shadow: 3px 3px 10px rgba(30, 30, 245, 0.3);
+    border-radius: 45px;
+    padding: 50px 80px 40px 80px;
+    background-color: white;
+    margin:10% 30px;
+    font-size: 18px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+.card-book img, .card-check img {
+    width: 20vh;
+    border-radius: 20px;
+}
+.card-book div:first-child, .card-check div:first-child {
+    height: 70%;
+}
+.card-book div:last-child, .card-check div:last-child {
+    height: 40%;
+}
+
+/*logout botton*/
+#logout {
+    margin-right: initial;
+    text-align: center;
+    font-family: "helvetica neue", Arial, Helvetica, sans-serif;
+    letter-spacing: 0.5px;
+    text-transform: uppercase;
+    border: 2px solid rgba(250, 238, 76, 0.6);
+    background: #ffaf1be0;
+    box-shadow: 2px 2px 4px rgba(0,0,200,0.4);
+    border-radius: 20px;
+    padding: 5px 15px;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+}
+#back, #cancel, #except {
+    text-align: center;
+    font-size: 25px;
+    letter-spacing: 1px;
+    border: 2px solid rgba(50, 128, 245, 0.527);
+    background: rgb(82, 13, 151);
+    box-shadow: 4px 4px 4px rgba(122, 122, 150, 0.541);
+    border-radius: 20px;
+    padding: 10px 30px;
+    display: inline-block;
+    outline: none;
+    cursor: pointer;
+}
+.user-action {
+    display: inline;
     float: right;
 }
+#cancel {
+    width: fit-content;
+    border: 2px solid rgba(240, 52, 139, 0.61);
+    background: rgb(247, 24, 24);
+}
+.card-app-container {
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    border-radius: 30px;
+    box-shadow: 0px 2px 4px 0px #f9fadc ;
+    padding: 40px;
+    background-image: linear-gradient(110deg, #fcca04 60%, #fff9da 60%);
+}
+.card-button{
+        text-align: right;;
+}
+.card-show-detail {
+    text-align: left;
+    font-size: 20px;
+    flex-direction: column;
+    display: flex;
+}
+.cancel-button{
+    margin: 20px 0px 0px 0px;
+    text-align: center;
+}
+.detail {
+    font-size: 30px;
+    flex-direction: column;
+    text-align: left;
+    margin: 80px 200px 0px 200px;
+    border-radius: 40px;
+    box-shadow: 4px 4px 4px #012c0167;
+    background-color:#73ccd5;
+}
+.detail div {
+    margin: 0.5cm;
+}
+.card-show-detail label{
+    background-color: white;
+    box-shadow: 4px 4px 4px rgba(122, 122, 150, 0.541);
+    border-radius: 20px;
+    font-size: 25px;
+    letter-spacing: 1px;
+    margin: 25px;
+    padding: 10px 60px 10px 60px;
+}
+#container-inform {
+    font-family: 'Prompt', sans-serif;
+    border-radius: 20px;
+    margin: 0px 20vh 0vh 20vh;
+    padding: 20px;
+}
+.main-inform {
+    width: auto;
+    height: 70vh;
+    margin:40px;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    font-size: 20px;
+    background-color: #a1ecd7 ;
+    border-radius: 50px; 
+}
+.check-use {
+    display: flex;
+    flex-direction: row;
+    padding:  0px 0px 0.5cm 0px;
+}
+.information {
+    padding: 0px 30px 30px 100px;
+}
+.input-name {
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+}
+.input-name div {
+    padding: 0px  0.5cm 0px  0px;
+}
+input {
+    border-radius: 20px;
+    border: 5px solid white;
+}
+.gender {
+    display: flex;
+    flex-direction: row;
+    padding: 0.5cm 0px 0.5cm 0px ;
+}
+textarea {
+    width: 400px;
+    height: 100px;
+    resize: none;
+    border-radius: 25px;
+}
+.certificate {
+    padding: 0.5cm 0px 0.5cm 0px ;
+}
+.verify, .verify div {
+    padding: 0cm 0px 0.5cm 0px ;
+}
+.except {
+    text-align: center;
+}
+#except-button {
+        font-size: 18px;
+        border: 2px solid rgba(250, 238, 76, 0.6);
+        background: #1bff1be0;
+        box-shadow: 2px 2px 4px rgba(0,0,200,0.4);
+        border-radius: 20px;
+        padding: 5px 25px;
+        cursor: pointer;
+}
+#container-calendar {
+    background-color: white;
+    padding: 180px;
+}
+
