--- a/web-page/chayanis-webpage/styles/doctor.css
+++ b/web-page/chayanis-webpage/styles/doctor.css
@@ -1,3 +1,4 @@
+@media screen and (max-width: 1600px) {
 body {
     background-color: #CCF2F9;
 }
@@ -147,4 +148,5 @@ input {
 #save button {
     color: #0C59F3;
     margin-left: 1%;
+}
 }
