--- a/web-page/chayanis-webpage/styles/list.css
+++ b/web-page/chayanis-webpage/styles/list.css
@@ -1,3 +1,4 @@
+@media screen and (max-width: 1600px) {
 body {
     background-color: #CCF2F9;
 }
@@ -149,4 +150,5 @@ table tbody tr.selected {
 #write {
     width: 30%;
     text-align: left;
+}
 }
