--- a/web-page/chayanis-webpage/styles/login.css
+++ b/web-page/chayanis-webpage/styles/login.css
@@ -1,4 +1,5 @@
 
+@media screen and (max-width: 1600px) {
 * {
     box-sizing: border-box;
 }
@@ -76,4 +77,5 @@ h2 {
 .button:hover {
     background-color:lightgreen;
 
+}
 }
