--- a/web-page/chayanis-webpage/styles/calendar.css
+++ b/web-page/chayanis-webpage/styles/calendar.css
@@ -1,4 +1,3 @@
-@media screen and (max-width: 1600px) {
 body {
     background-color: #CCF2F9;
 }
@@ -93,7 +92,7 @@ h2 {
 .menu-choice {
     margin-left: 10%;
 }
-}
+
 @media screen and (max-width: 600px) {
     .container {
         width: 450px;
@@ -139,5 +138,5 @@ h2 {
 }
 #button-back {
     display: none;
-}
-  }
+}}
+  
