--- a/web-page/chayanis-webpage/styles/login.css
+++ b/web-page/chayanis-webpage/styles/login.css
@@ -1,4 +1,4 @@
-
+@media only screen and (min-width: 768px) {
 * {
     box-sizing: border-box;
 }
@@ -76,4 +76,5 @@ h2 {
 .button:hover {
     background-color:lightgreen;
 
+}
 }
