--- a/web-page/chayanis-webpage/styles/menuPage.css
+++ b/web-page/chayanis-webpage/styles/menuPage.css
@@ -1,4 +1,4 @@
-
+@media only screen and (min-width: 768px) {
 body {
     background-color: #CCF2F9;
 }
@@ -143,4 +143,5 @@ a {
 }
 #button-logout:hover {
     background-color:  lightblue; 
+}
 }
