--- a/web-page/ratchaneegorn-webpage/style/style.css
+++ b/web-page/ratchaneegorn-webpage/style/style.css
@@ -205,13 +205,13 @@ body {
 .check-use {
     display: flex;
     flex-direction: row;
-    padding:  0px 0px 10pxm 0px;
+    padding:  0px 0px 10px 0px;
 }
 .information {
     padding: 0px 30px 30px 100px;
 }
 .information label {
-    padding:  0px 0px 10pxm 0px;
+    padding:  0px 0px 10px 0px;
 }
 #id, #fname, #lname {
     width: 200px;
@@ -292,4 +292,42 @@ textarea {
 #container-appoint {
     display: flex;
     flex-direction: column;
+}
+#map {
+    height: 500px;
+    width: 100%;
+}
+#container-map {
+    margin-left: auto;
+    margin-right: auto;
+    height: 100%;
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+}
+.location {
+    display: flex;
+    flex-direction: column;
+}
+.location select {
+    border: 2px solid white;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 5px;
+    margin-right: 60px;
+    width: 250px;
+}
+#back-bt {
+    margin-right: auto;
+    width: 80px;
+    font-size: 14px;
+    text-align: center;
+    border-radius: 20px;
+    outline: none;
+    cursor: pointer;
+    border: 1px solid rgb(199, 199, 199);
+    background: rgb(82, 13, 151);
+    box-shadow: 5px black;
+    margin: 10px;
+    padding: 5px;   
 }
