--- a/web-page/ratchaneegorn-webpage/style/styleresponsive.css
+++ b/web-page/ratchaneegorn-webpage/style/styleresponsive.css
@@ -81,4 +81,17 @@
         padding: 2px;
 
     }
+    #map {
+        height: 400px;
+        width: 100%;
+    }
+    #container-map {
+        margin-left: auto;
+        margin-right: auto;
+        height: 100%;
+        width: 70%;
+        padding: none;
+        display: flex;
+        flex-direction: column;
+    }
 }
