--- a/web-page/ratchaneegorn-webpage/style/style.css
+++ b/web-page/ratchaneegorn-webpage/style/style.css
@@ -35,13 +35,16 @@ body {
 .user-action {
     text-align: right;
 }
-#logout {
+#logout, #login {
+    width: 100px;
+    font-size: 10px;
     margin-right: initial;
     text-align: center;
     font-family: "helvetica neue", Arial, Helvetica, sans-serif;
     letter-spacing: 0.5px;
     text-transform: uppercase;
     text-align: center;
+    color: white;
     border: 2px solid rgba(255, 232, 105, 0.795);
     background: #ffaf1be0;
     box-shadow: 2px 2px 4px rgba(0,0,200,0.4);
@@ -206,6 +209,7 @@ body {
     display: flex;
     flex-direction: row;
     padding:  0px 0px 10px 0px;
+   
 }
 .information {
     padding: 0px 30px 30px 100px;
@@ -234,6 +238,7 @@ input {
     /* display: flex; */
     flex-direction: row;
     padding: 10px 0px 10px 0px ;
+   
 }
 textarea {
     width: 400px;
