--- a/web-page/chayanis-webpage/styles/calendar.css
+++ b/web-page/chayanis-webpage/styles/calendar.css
@@ -1,4 +1,3 @@
-@media only screen and (min-width: 768px) {
 body {
     background-color: #CCF2F9;
 }
@@ -11,7 +10,7 @@ body {
     border:4px solid #288F20;
     border-radius: 60px;
     width: 1400px;
-    height: 660px;
+    height: 650px;
     margin: auto;
     margin-top: 2%;
 }
@@ -93,5 +92,7 @@ h2 {
 .menu-choice {
     margin-left: 10%;
 }
+
+@media only screen and (max-width: 768px) {
+   
 }
-  
